Revision history for {{$dist->name}}

{{$NEXT}}

1.40      2015-02-03 12:05:05 -0500
  - added FFI::Platypus::Lang::Pascal
  - updated my dists to latest  
  
1.39      2015-02-02 05:08:44 -0500
  - fix version for FFI::ExtractSymbols

1.38      2015-02-02 05:05:16 -0500
  - added FFI::ExtractSymbols
  - added FFI::Platypus::Lang::CPP::Demangle::XS
  - updated my dists to latest  

1.37      2015-01-30 15:47:23 -0500
  - added FFI::Platypus::Lang::Rust
  - added FFI::Platypus::Lang::CPP
  - updated my dists to latest  

1.36      2015-01-28 17:15:35 -0500
  - updated my dists to latest

1.35      2015-01-23 19:00:25 -0500
  - added FFI::Platypus::Type::StringArray
  - updated my dists to latest

1.34      2015-01-22 10:52:37 -0500
  - added UUID::FFI
  - updated my dists to latest

1.33      2015-01-21 23:31:42 -0500
  - add Win32::Getppid  
  - updated my dists to latest

1.32      2015-01-09 16:53:40 -0500
  - updated my dists to latest
  - add FFI::Platypus
    not on CPAN yet, but I have a good feeling about it

1.31      2015-01-08 04:00:42 -0500
  - update my dists to latest

1.30      2015-01-05 10:54:31 -0500
  - remove merged dist Clustericious::Client
  - remove merged dist Clustericious::Log
  - remove merged dist Clustericious::Config
  - update my dists to latest

1.29      2014-12-20 05:30:41 -0500
  - update my dists to latest

1.28      2014-12-19 12:47:24 -0500
  - remove merged dist PlugAuth::Lite

1.27      2014-12-19 12:12:03 -0500
  - remove merged dist PlugAuth::Client
  - remove merged dist PlugAuth::Plugin::Admin
  - remove merged dist Yars::Client
  - update my dists to latest

1.26      2014-11-19 15:23:37 -0500
  - add Alien::bison
  - add Alien::m4
  - update my dists to latest  

1.25      2014-11-09 10:28:01 -0500
  - update my dists to latest

1.24      2014-11-06 06:19:37 -0500
  - remove some skips for OS X

1.23      2014-11-05 22:59:53 -0500
  - update my dists to latest  

1.22      2014-11-05 22:53:01 -0500